# IMDB-clone

./: .gitignore  README.md  db.sqlite3  pyproject.toml
IMDB/: settings.py  urls.py
IMDB_user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
IMDB_user/migrations/: 0001_initial.py  0002_alter_mycustomuser_followed_list.py  0002_auto_20210408_0047.py  0002_auto_20210414_1940.py  0002_auto_20210415_1803.py  0002_mycustomuser_karma_score.py  0003_auto_20210408_0058.py  0003_auto_20210415_2315.py  0004_merge_20210409_1808.py  0004_mycustomuser_followed_list.py  0005_auto_20210413_1526.py
actors/: admin.py  forms.py  models.py  urls.py  views.py
actors/migrations/: 0001_initial.py
authentication/: forms.py  views.py
karma/: views.py
movies/: forms.py  helpers.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_auto_20210407_1950.py  0002_movie_name.py  0003_auto_20210408_0134.py  0003_remove_movie_name.py  0004_auto_20210408_1816.py  0004_merge_20210408_0237.py  0005_auto_20210408_1837.py  0006_auto_20210408_1853.py  0007_auto_20210408_1925.py
reviews/: forms.py  models.py  views.py
reviews/migrations/: 0001_initial.py  0002_auto_20210407_1950.py  0003_auto_20210408_1607.py  (+2 more)
templates/: 404.html  500 2.html  500.html  base 2.html  base.html  editprofile.html  followed.html  general_form 2.html  general_form.html  homepage.html  index.html  login.html  movie_detail.html  movie_results.html  navbar.html  profile.html  reviews.html  search_form.html  signup.html  user_profile.html  user_reviews.html
user_profile/: views.py
(+14 files in other folders)
