[tool.poetry]
name = "imbd-capstone"
version = "0.1.0"
description = ""
authors = ["edward, april, matt, kyle"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
requests = "^2.25.1"
django-environ = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
